--- a/ckanext/tess/templates/snippets/related_event.html
+++ b/ckanext/tess/templates/snippets/related_event.html
@@ -7,7 +7,7 @@
 {% endif %}
 
 {% if event.get('subtitle') %}
-    <b>{{event.pop('subtitle') }}</b>
+    <b>{{event.pop('subtitle') }}</b><br>
 {% endif %}
 
 {% if event.get('city') and event.get('country') %}
