--- a/ckanext/tess/templates/package/read_base.html
+++ b/ckanext/tess/templates/package/read_base.html
@@ -26,7 +26,7 @@
 {{ h.build_nav_icon('dataset_read', _('Training material'), id=pkg.name) }}
 {{ h.build_nav_icon('dataset_groups', _('Package'), id=pkg.name) }}
 {{ h.build_nav_icon('dataset_activity', _('Activity Stream'), id=pkg.name) }}
-{% endblock %}
+{% endblock %}4
 
 {% block primary_content_inner %}
 {% block package_revision_info %}
