Tweaks to footer

--- a/ckanext/tess/templates/footer.html
+++ b/ckanext/tess/templates/footer.html
@@ -1,12 +1,19 @@
-{% ckan_extends %}
-
-{% block footer_links %}
-    <a target="_blank" href="http://elixir-uk.org/"><img src="/images/elixir-uk-logo-small.png"></a>
-    <span style="padding-left:50px;"><b>Contact us: </b><a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a></span>
-{% endblock %}
-
-{% block footer_links_ckan %}
-{% endblock %}
-
-{% block footer_lang %}
-{% endblock %}
+<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-links attribution">
+                <div style="float: left;">
+                    <p style="padding-top: 20px;"><strong>Contact us:</strong> <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a></p>
+                </div>
+                <div class="" style="float: right; vertical-align: middle;">
+                    <a target="_blank" href="http://elixir-uk.org/" style="float: right;">
+                    <img src="/images/elixir-uk-logo-small.png"></a>
+                </div>
+                <div class="span5"  style="float: right; padding: 10px;">
+                    <p><strong>Powered by</strong> <a class="hide-text ckan-footer-logo" href="http://ckan.org">CKAN</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+</div>
