--- a/ckanext/tess/templates/event/snippets/events_item.html
+++ b/ckanext/tess/templates/event/snippets/events_item.html
@@ -1,7 +1,10 @@
-
+{% set expired = event.pop('expired', None) %}
+{% if expired %}
+    <div style="background-color: #f8f8ff">
+{% endif %}
 {% if event.get('link') %}
     {% set link = event.pop('link') %}
-    <a href="{{link}}" target="_blank" style="word-break: break-all"><h3>{{event.pop('title') }}</h3></a>
+    <a href="{{link}}" target="_blank"><h3>{{event.pop('title') }}</h3></a>
 {% else %}
     <h3>{{event.pop('title') }}</h3>
 {% endif %}
@@ -14,6 +17,13 @@
     <b>Place:</b> {{ event.pop('city')}}, {{ event.pop('country')}}<br>
 {% endif %}
 
+{% if event.get('starts') %}
+    <b>Starts:</b> {{ event.pop('starts')}}<br>
+{% endif %}
+{% if event.get('ends') %}
+    <b>Finish:</b> {{ event.pop('ends')}}<br>
+{% endif %}
+
 {% set id = event.pop('id') %}
 {% for k, v in event.iteritems(): %}
   {% if v %}
@@ -23,4 +33,9 @@
 
 {% if related %}
     <br><a class="btn" value="{{related.id}}">Associate with Material</a>
+{% endif %}
+
+{% if expired %}
+        <h4 style="color: rgb(176, 0, 0); text-align: center">[This Event has already happened]</h4><br>
+    </div>
 {% endif %}
