Exclude previous events by default with option to include

--- a/ckanext/tess/templates/event/snippets/events_item.html
+++ b/ckanext/tess/templates/event/snippets/events_item.html
@@ -36,6 +36,6 @@
 {% endif %}
 
 {% if expired %}
-        <h4 style="color: rgb(176, 0, 0); text-align: center">[This Event has already happened]</h4><br>
+        <h4 style="color: rgb(176, 0, 0); text-align: center">[This event happened {{expired}}]</h4><br>
     </div>
 {% endif %}
