--- a/ckanext/tess/templates/event/snippets/events_list.html
+++ b/ckanext/tess/templates/event/snippets/events_list.html
@@ -24,7 +24,7 @@ Could do with switching to package style long bar items.
                                             no_bottom_border=true if c.page.items
 %}
 {% snippet 'event/snippets/events_options.html' %}
-
+<!--h1>Displaying {{c.display_count}} Events</h1-->
 {% if events %}
 <div class="module-content">
     <ul class="media-grid masonry" data-module="media-grid">
@@ -36,5 +36,7 @@ Could do with switching to package style long bar items.
     </ul>
 </div>
 {% endif %}
+
+
 <a href="http://iann.pro/iannviewer">Find more events</a>
 
