--- a/ckanext/tess/templates/event/snippets/events_item.html
+++ b/ckanext/tess/templates/event/snippets/events_item.html
@@ -33,5 +33,5 @@
 {% endif %}
 
 {% if expired %}
-        <h4 style="color: rgb(176, 0, 0); text-align: center">[This event happened {{expired}}]</h4><br>
+        <h4 style="color: rgb(176, 0, 0); text-align: center">[This event happened {{expired}}]</h4>
 {% endif %}
