--- a/ckanext/tess/templates/node/snippets/node_template.html
+++ b/ckanext/tess/templates/node/snippets/node_template.html
@@ -12,32 +12,38 @@
 {% block primary %}
 {% set country_code = node.get('country_code') %}
 <header class="module-content page-header" style="padding:10px; margin: 0px;">
-        <div style="float: left; padding: 20px;">
-            {% snippet "node/snippets/node_list_dropdown.html" %}
-        </div>
         <div style="float: left; padding-left: 10px;">
             {% if country_code : %}
-                <img src="/images/node_flags/{{ country_code }}.png" class="img-circle-small" style="max-height: 60px;"/>
+                {% if node.get('home_page'): %}
+                    <a href="{{node.get('home_page')}}">
+                        <img src="/images/node_flags/{{ country_code }}-elixir.png" class="img-circle-small" style="max-height: 60px;"/>
+                    </a>
+                {% else %}
+                    <img src="/images/node_flags/{{ country_code }}-elixir.png" class="img-circle-small" style="max-height: 60px;"/>
+                {% endif %}
             {% endif %}
         </div>
+        {% if node.state == 'deleted' %}
         <div style="float: left; width: 60%;">
             <h1 class="page-heading" style="text-align:center; margin: 0px;">
-                {{ node.get('display_name') }}
-                {% if node.state == 'deleted' %}
+                <!--{{ node.get('display_name') }}-->
                 [{{ _('Deleted') }}]
-                {% endif %}
             </h1>
-            {% if node.get('home_page'): %}
-                <div style="text-align:center"><a href="{{node.get('home_page')}}">{{node.get('home_page')}}</a></div>
-            {% endif %}
         </div>
-
+        {% endif %}
+        <div style="float: right; padding: 10px;">
+            {% snippet "node/snippets/node_list_dropdown.html" %}
+        </div>
         {% block content_action %}
             {% if h.check_access('group_update', {'id': c.group_dict.id}) %}
-              {% link_for _('Manage'), controller='ckanext.tess.node:NodeController', action='edit', id=node.get('name'), class_='btn', icon='wrench' %}
+            <div style="float: right; padding: 10px;">
+                {% link_for _('Manage'), controller='ckanext.tess.node:NodeController', action='edit', id=node.get('name'), class_='btn', icon='wrench' %}
+            </div>
             {% endif %}
         {% endblock %}
 </header>
+
+<div style="clear:both;"></div>
 
 {% block node_heading %}
 {% snippet "node/snippets/heading_for_node.html", node=node %}
