--- a/ckanext/tess/templates/node/edit_base.html
+++ b/ckanext/tess/templates/node/edit_base.html
@@ -2,7 +2,7 @@
 
 {% set organization = c.group_dict %}
 
-{% block subtitle %}{{ c.group_dict.display_name }} - {{ _('Content providers') }}{% endblock %}
+{% block subtitle %}{{ c.group_dict.display_name }} - {{ _('Nodes') }}{% endblock %}
 
 {% block breadcrumb_content %}
   <li>{% link_for _('Nodes'), controller='organization', action='index' %}</li>
