--- a/ckanext/tess/templates/snippets/node_info.html
+++ b/ckanext/tess/templates/snippets/node_info.html
@@ -1,26 +1,32 @@
 {% set url = h.url_for(controller='ckanext.tess.node:NodeController', action='read', id=node.get('name')) %}
 {% if node.get('country_code') %}
-    {% set logo_link = h.url_for_static('/images/node_flags/' + node.get('country_code') + '.png') %}
+{% set logo_link = h.url_for_static('/images/node_flags/' + node.get('country_code') + '-small.png') %}
 {% endif %}
 {% block info %}
-<div class="module module-narrow module-shallow context-info">
-    <h2 class="module-heading"><div class="icon-elixir"></div> {{ _('ELIXIR Node') }}</h2>
-    <section class="module-content">
+<section class="module module-narrow module-shallow">
+    <h2 class="module-heading">
+        <i class="icon-medium icon-elixir"></i>{{ _('ELIXIR Node') }}
+    </h2>
+        <nav>
+            <ul class="unstyled nav-simple">
+                <li class="nav-item" style="padding-left: 15px; padding-right: 5px;">
+                    <div>
+                        {% if logo_link %}
+                        <a href="{{url}}">
+                            <img src="{{logo_link}}"
+                                 alt="{{ node.get('display_name') }}" style="max-height:60px;">
+                        </a>
+                        {% endif %}
+                        <a href="{{url}}">
+                            {{ node.get('display_name') }}
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+        <p class="module-footer">
+        </p>
+</section>
 
-        {% block image %}
-            {% if logo_link %}
-            <div>
-                <a href="{{url}}">
-                   <img class="img-circle-small" src="{{logo_link}}"
-                     alt="{{ node.get('display_name') }}" style="max-height:60px;">
-                </a>
-            </div>
-            {% endif %}
-        {% endblock %}
-        <a href="{{url}}">
-            <h1 class="heading">{{ node.get('display_name') }}</h1>
-        </a>
-    </section>
-</div>
 {% endblock %}
 
