--- a/ckanext/tess/templates/snippets/organization.html
+++ b/ckanext/tess/templates/snippets/organization.html
@@ -74,7 +74,7 @@ Example:
                 {% set node = h.get_node(node_name) %}
                 {% set node_url = h.url_for(controller='ckanext.tess.node:NodeController', action='read', id=node_name) %}
                 {% if node.get('country_code', None) %}
-                    {% set logo_link = h.url_for_static('/images/node_flags/' + node.get('country_code') + '.png') %}
+                    {% set logo_link = h.url_for_static('/images/node_flags/' + node.get('country_code') + '-small.png') %}
                 {% endif %}
 
                     <section class="module module-narrow module-shallow">
@@ -88,7 +88,7 @@ Example:
                                     <div>
                                     {% if logo_link %}
                                         <a href="{{ node_url }}">
-                                            <img class="img-circle-small" src="{{logo_link}}"
+                                            <img src="{{logo_link}}"
                                             alt="{{ node.get('display_name') }}" style="max-height:60px;">
                                         </a> &nbsp;
                                     {% endif %}
