--- a/ckanext/tess/templates/snippets/node_info.html
+++ b/ckanext/tess/templates/snippets/node_info.html
@@ -15,7 +15,7 @@
                         <a href="{{url}}">
                             <img src="{{logo_link}}"
                                  alt="{{ node.get('display_name') }}" style="max-height:60px;">
-                        </a>
+                        </a>&nbsp;
                         {% endif %}
                         <a href="{{url}}">
                             {{ node.get('display_name') }}
