--- a/ckanext/tess/templates/snippets/node_info.html
+++ b/ckanext/tess/templates/snippets/node_info.html
@@ -13,8 +13,7 @@
                     <div>
                         {% if logo_link %}
                         <a href="{{url}}">
-                            <img src="{{logo_link}}"
-                                 alt="{{ node.get('display_name') }}" style="max-height:60px;">
+                            <img src="{{logo_link}}" style="max-height:60px;">
                         </a>&nbsp;
                         {% endif %}
                         <a href="{{url}}">
