--- a/ckanext/tess/templates/snippets/organization.html
+++ b/ckanext/tess/templates/snippets/organization.html
@@ -88,8 +88,7 @@ Example:
                                     <div>
                                     {% if logo_link %}
                                         <a href="{{ node_url }}">
-                                            <img src="{{logo_link}}"
-                                            alt="{{ node.get('display_name') }}" style="max-height:60px;">
+                                            <img src="{{logo_link}}" style="max-height:60px;">
                                         </a> &nbsp;
                                     {% endif %}
                                     <a href="{{ node_url }}">
