A few more variants of the ELIXIR logo.

--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -376,7 +376,7 @@ hr.style-one {
 .icon-elixir {
     width:16px;
     height:16px;
-    background-image: url('/images/icon-elixir.png');
+    background-image: url('/images/ELIXIR-icon-orange-16x16.png');
     margin:0;
     padding:0;
     float:left;
