Added help text for events

--- a/ckanext/tess/templates/event/snippets/helper.html
+++ b/ckanext/tess/templates/event/snippets/helper.html
@@ -6,7 +6,9 @@
     <div class="module-content">
         <p>
             {% trans %}
-            THIS IS A PLACEHOLDER
+            Events are sourced from <a href="http://iAnn.pro" target="_blank">iAnn.pro</a>: a curated database of Life Science events.<br>
+            You can use the filters (below) and search bar (right) to find relevant events and courses. <br><br>
+            If you wish to register a new event you can <a href="/event/new">report</a> one with iAnn.</a>
             {% endtrans %}
         </p>
     </div>
