--- a/ckanext/tess/templates/event/read.html
+++ b/ckanext/tess/templates/event/read.html
@@ -15,7 +15,7 @@
 <div class="primary" style="width: 74%; padding-right: 10px;">
     <section class="module">
         <div id="iAnnList" class="events-source">
-            {% link_for _('Add Event'), controller='ckanext.tess.plugin:TeSSController', action='report_event', class_="btn btn-primary", icon="plus-sign-alt", target="_blank"%}
+            {% link_for _('Add Event'), controller='ckanext.tess.plugin:TeSSController', action='report_event', class_="btn btn-primary", icon="plus-sign-alt"%}
             <p>
                 {#{ c.events_url }#}
                 {% snippet "event/snippets/events_list.html", events=c.events %}
