--- a/ckanext/tess/templates/event/read.html
+++ b/ckanext/tess/templates/event/read.html
@@ -3,28 +3,49 @@
 {% block subtitle %}{{ _('Events') }}{% endblock %}
 
 {% block breadcrumb_content %}
-  <li class="active">{% link_for _('Events'), controller='home', action='about' %}</li>
+<li class="active">{% link_for _('Events'), controller='group', action='index' %}</li>
+{% endblock %}
+
+{% block page_header %}{% endblock %}
+
+{% block page_primary_action %}
+    {% link_for _('Add Event'), controller='ckanext.tess.plugin:TeSSController', action='report_event', class_="btn btn-primary", icon="plus-sign-alt"%}
+{% endblock %}
+
+{% block primary_content_inner %}
+    {% block events_search_form %}
+        {% set sorting = [ (_('Date Ascending'), 'end asc'),
+                           (_('Date Descending'), 'end desc')] %}
+        {% snippet 'snippets/search_form.html',     fields=[('category', c.category), ('include_expired', c.include_expired_events)],
+                                            type=(c.category or 'event'),
+                                            query=c.q,
+                                            sorting=sorting,
+                                            sorting_selected=c.sort_by_selected,
+                                            count=c.events_count,
+                                            placeholder=_('Search Events...'),
+                                            show_empty=request.params,
+                                            no_bottom_border=true if c.page.items
+        %}
+
+    {% snippet "event/snippets/events_options.html" %}
+    {% endblock %}
+
+    {% block events_list %}
+        {% snippet "event/snippets/events_list.html", events=c.events %}
+    {% endblock %}
+
+    {% block page_pagination %}
+        {{ c.page.pager() }}
+    {% endblock %}
+
+    {% block attribution %}
+        <p class="events-source-title"><strong>Source:</strong>
+        <a target="_blank" href="http://iann.pro"><img alt="iAnn" src="/images/iann_logo-32x30.png"/></a></p>
+    {% endblock %}
+
 {% endblock %}
 
 {% block secondary_content %}
     {% snippet "event/snippets/helper.html" %}
     {% snippet "event/snippets/filters.html" %}
-{% endblock %}
-
-{% block primary %}
-<div class="primary" style="width: 74%; padding-right: 10px;">
-    <section class="module">
-        <div id="iAnnList" class="events-source">
-            {% link_for _('Add Event'), controller='ckanext.tess.plugin:TeSSController', action='report_event', class_="btn btn-primary", icon="plus-sign-alt"%}
-            <p>
-                {#{ c.events_url }#}
-                {% snippet "event/snippets/events_list.html", events=c.events %}
-            </p>
-            <hr/>
-            {% block page_pagination %}
-                {{ c.page.pager() }}
-            {% endblock %}
-        </div>
-    </section>
-</div>
 {% endblock %}
