--- a/ckanext/tess/templates/event/snippets/events_list.html
+++ b/ckanext/tess/templates/event/snippets/events_list.html
@@ -1,48 +1,17 @@
 {#
+Display events. Requires many global c values. Checkout ckanext-tess plugin.py#Events.
+
 related - True or False - Used when loading events as a tab in manage a training material
 #}
 
-{% set sorting = [ (_('Date Ascending'), 'end asc'),
-                   (_('Date Descending'), 'end desc')] %}
-{#
-Can add this to sort alphabetically. The masonic grid means they won't display in order though.
-Could do with switching to package style long bar items.
-(_('Name Ascending'), 'title asc'),
-(_('Name Descending'), 'title desc')
-#}
+{% block events_list %}
+<ul class="media-grid" data-module="media-grid ">
+	{% block events_list_inner %}
+            {% for event in events: %}
+                {% snippet "event/snippets/events_item.html", event=event, related=related, position=loop.index %}
+            {% endfor %}
+  {% endblock %}
+</ul>
+{% endblock %}
 
 
-{% snippet 'snippets/search_form.html',     fields=[('category', c.category), ('include_expired', c.include_expired_events)],
-                                            type=(c.category or 'event'),
-                                            query=c.q,
-                                            sorting=sorting,
-                                            sorting_selected=c.sort_by_selected,
-                                            count=c.events_count,
-                                            placeholder=_('Search Events...'),
-                                            show_empty=request.params,
-                                            no_bottom_border=true if c.page.items
-%}
-{% if not related %}
-    {% snippet "event/snippets/events_options.html" %}
-{% endif %}
-
-<!--h1>Displaying {{c.display_count}} Events</h1-->
-{% if events %}
-<div class="module-content">
-    <ul class="media-grid masonry" data-module="media-grid">
-        {% for event in events: %}
-                {% if event.get('expired', False) %}
-                    <li class="media-item masonry-brick node-brick expired_event">
-                {% else %}
-                    <li class="media-item masonry-brick node-brick">
-                {% endif %}
-                {% snippet "event/snippets/events_item.html", event=event, related=related %}<br>
-                </li>
-        {% endfor %}
-    </ul>
-</div>
-{% endif %}
-<p class="events-source-title"><strong>Source:</strong>
-<a target="_blank" href="http://iann.pro"><img alt="iAnn" src="/images/iann_logo-32x30.png"/>
-</a>
-</p>
