Border was moving past events button on paginated pages

--- a/ckanext/tess/templates/event/read.html
+++ b/ckanext/tess/templates/event/read.html
@@ -24,7 +24,7 @@
                                             count=c.events_count,
                                             placeholder=_('Search Events...'),
                                             show_empty=request.params,
-                                            no_bottom_border=true if c.page.items
+                                            no_bottom_border=true
         %}
 
     {% snippet "event/snippets/events_options.html" %}
